<resources>
    <string name="app_name">MemoryGame</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="playButtonText">Play</string>
    <string name="DifficultyText">Difficulty:</string>
    <string name="titleText">Memory Game</string>
    <string name="scoreText">Score: 0</string>
    <string name="backButton">Back</string>
    <string name="PlayAgainText">Play Again</string>

    <string-array name="difficultyList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>