...
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButtonText"
        android:textColor="#E91E63"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyText"
        app:layout_constraintVertical_bias="0.344" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:entries="@array/difficulty_list"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/difficultyText"
        app:layout_constraintEnd_toEndOf="parent"
...
